  (1 vs. chr1) supported.
- Better integration into existing copy number pipelines.
- Automatic COSMIC annotation.
- Documentation improvements.

-------------------------------------------------------------------------------

Other major enhancements

- More thorough initial grid search should minimize cases where purity/ploidy
  is wrong because the solution was not considered.
- More robust and accurate likelihood model that provides robust estimates of 
  minor segment copy numbers and more accurate LOH.  
- Support for SNVs outside the target interval file
  (remove.off.target.snvs=FALSE).   
- Improved segmentation and log-ratio normalization.  
- Support for non-human samples.
- Support for 100% pure samples (matched normal mode only).
- Faster SNV fitting.

-------------------------------------------------------------------------------

API changes

- New functions: autoCurateResults, bootstrapResults, 
    calculateBamCoverageByInterval, calculateGCContentByInterval,
    calculateLogRatio, calculatePowerDetectSomatic, callAlterations, callLOH, 
    filterTargets, getDiploid, getSexFromVcf, setMappingBiasVcf
- Deprecated functions: segmentationPSCBS
- Renamed functions: createExonWeightFile to createTargetWeights
- Renamed function arguments: 
    exon.weight.file to target.weight.file
    gatk.normal.file to normal.coverage.file
    gatk.tumor.file to tumor.coverage.file

-------------------------------------------------------------------------------

Other new features

- Functions to calculate power to detect mono-clonal and sub-clonal somatic
  mutations (Carter et al., Nature Biotech, 2012) were added.

-------------------------------------------------------------------------------

Planned features for PureCN 1.4 (Bioconductor 3.5)

- Support for indels.
- Better runtime performance by ignoring unlikely solutions early.  
- Switch to S4 data structures.

-------------------------------------------------------------------------------